fix: Makefile to support spaces in path

--- a/Sources/WireGuardKitGo/Makefile
+++ b/Sources/WireGuardKitGo/Makefile
@@ -31,12 +31,37 @@ version-header: $(DESTDIR)/wireguard-go-version.h
 
 REAL_GOROOT := $(shell go env GOROOT 2>/dev/null)
 export GOROOT := $(BUILDDIR)/goroot
-$(GOROOT)/.prepared:
+# Escape spaces in GOROOT for use in Make target/prerequisite names.
+# Make uses spaces as delimiters when parsing targets, so a path like
+# "/path/value one/goroot" would not be misinterpreted as two separate targets.
+#
+# How it works:
+#   $(eval)           - expands to nothing, but the space after it is preserved
+#   $(eval) <space>   - this is the "search" pattern: a literal space character
+#   \ <space>         - this is the "replacement": backslash-escaped space
+#   $(subst ...)      - replaces all spaces with "\ " (escaped spaces)
+#
+# Result: "/path/value one/goroot" becomes "/path/value\ one/goroot"
+# which Make correctly parses as a single target name even if the path contains spaces.
+GOROOT_ESCAPED := $(subst $(eval) ,\ ,$(GOROOT))
+$(GOROOT_ESCAPED)/.prepared:
+$(GOROOT_ESCAPED)/.prepared:
+	echo "note: Running '$(GOROOT_ESCAPED)/.prepared' block"
+	echo "note:   Working directory='$(shell pwd)'"
+	echo "note:   REAL_GOROOT='$(REAL_GOROOT)'"
+	echo "note:   GOROOT_ESCAPED='$(GOROOT_ESCAPED)'"
+
 	[ -n "$(REAL_GOROOT)" ]
 	mkdir -p "$(GOROOT)"
+
+	echo "note:   rsyncing '$(REAL_GOROOT)/' to '$(GOROOT)/'"
 	rsync -a --delete --exclude=pkg/obj/go-build "$(REAL_GOROOT)/" "$(GOROOT)/"
+
+	echo "note:   patching '$(GOROOT)/' with 'goruntime-*.diff'"
 	cat goruntime-*.diff | patch -p1 -f -N -r- -d "$(GOROOT)"
-	touch "$*"
+
+	echo "note:   touching '${@}'"
+	touch "${@}"
 
 define libwg-go-a
 $(BUILDDIR)/libwg-go-$(1).a: export CGO_ENABLED := 1
@@ -44,13 +69,13 @@ $(BUILDDIR)/libwg-go-$(1).a: export CGO_CFLAGS := $(CFLAGS_PREFIX) $(ARCH)
 $(BUILDDIR)/libwg-go-$(1).a: export CGO_LDFLAGS := $(CFLAGS_PREFIX) $(ARCH)
 $(BUILDDIR)/libwg-go-$(1).a: export GOOS := $(GOOS_$(PLATFORM_NAME))
 $(BUILDDIR)/libwg-go-$(1).a: export GOARCH := $(GOARCH_$(1))
-$(BUILDDIR)/libwg-go-$(1).a: $(GOROOT)/.prepared go.mod
+$(BUILDDIR)/libwg-go-$(1).a: $(GOROOT_ESCAPED)/.prepared go.mod
 	go build -ldflags=-w -trimpath -v -o "$(BUILDDIR)/libwg-go-$(1).a" -buildmode c-archive
 	rm -f "$(BUILDDIR)/libwg-go-$(1).h"
 endef
 $(foreach ARCH,$(ARCHS),$(eval $(call libwg-go-a,$(ARCH))))
 
-$(DESTDIR)/wireguard-go-version.h: go.mod $(GOROOT)/.prepared
+$(DESTDIR)/wireguard-go-version.h: go.mod $(GOROOT_ESCAPED)/.prepared
 	 sed -E -n 's/.*golang\.zx2c4\.com\/wireguard +v[0-9.]+-[0-9]+-([0-9a-f]{8})[0-9a-f]{4}.*/#define WIREGUARD_GO_VERSION "\1"/p' "$<" > "$@"
 
 $(DESTDIR)/libwg-go.a: $(foreach ARCH,$(ARCHS),$(BUILDDIR)/libwg-go-$(ARCH).a)
